--- a/templates/post.html
+++ b/templates/post.html
@@ -3,4 +3,9 @@
     <h1>{{post.title}}</h1>
     <p>{{post.content}}</p>
 
+    {% if post.image %}
+        <img src="{{post.image.url}}" width="150" height="150" alt="A picture of {{post.title}}">
+    {% endif %}
+
 {% endfor %}
+g
