finish post css

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,10 +1,23 @@
-{% for post in object_list %}
+{% load static %}
 
-    <h1>{{post.title}}</h1>
-    <p>{{post.content}}</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
+    <link rel="stylesheet" href="{% static 'css/post.css' %}"> <!-- Vincula el archivo CSS -->
+</head>
+<body>
+    {% for post in object_list %}
+    <div class="post">
+        <h1>{{post.title}}</h1>
+        <p>{{post.content}}</p>
 
-    {% if post.image %}
-        <img src="{{post.image.url}}" width="150" height="150" alt="A picture of {{post.title}}">
-    {% endif %}
-
-{% endfor %}
+        {% if post.image %}
+            <img src="{{post.image.url}}" alt="A picture of {{post.title}}">
+        {% endif %}
+    </div>
+    {% endfor %}
+</body>
+</html>
