--- a/templates/movie/movie_list.html
+++ b/templates/movie/movie_list.html
@@ -1,16 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catalogo</title>
+    <link rel="stylesheet" href="{% static 'css/peliculas.css' %}">
 </head>
 <body>
     <h1>Catalogo de Peliculas</h1>
 
     {% for movie in object_list %}
 
-        <h2>{{movie.titulo}}</h2>
+        <h2><a href="{% url 'movie_detail' movie.pk %}">{{movie.titulo}}</a></h2>
         <img src="{{movie.imagen.url}}" alt="A picture of {{movie.titulo}}">
 
         {% endfor %}
